Added in more action words

--- a/SDL_Data_Mining.ipynb
+++ b/SDL_Data_Mining.ipynb
@@ -91,7 +91,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGSVWQdTeDeG",
-        "outputId": "92b049f6-7f8a-493b-8aec-aef9801da064",
+        "outputId": "fe21b05c-af95-4b14-98f0-b72f3ad02946",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 787
@@ -100,7 +100,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 177,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +862,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 177
+          "execution_count": 58
         }
       ]
     },
@@ -884,7 +884,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KEd8mYWAouxX",
-        "outputId": "d9aea312-8193-406b-ac80-7fe413db021f",
+        "outputId": "318c81eb-66aa-482b-cef3-0d7b74f16359",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -893,7 +893,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 179,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 179
+          "execution_count": 60
         }
       ]
     },
@@ -1167,7 +1167,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "0KgDY68fr-k8",
-        "outputId": "3f143638-7656-4e0f-9396-2072571f55fb",
+        "outputId": "d4264bf7-8175-44af-d652-a89e68cf797d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -1176,7 +1176,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 181,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1428,7 +1428,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 181
+          "execution_count": 62
         }
       ]
     },
@@ -1464,7 +1464,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nbJgQfbsjels",
-        "outputId": "ae36352b-c2b1-49eb-a79c-3ba9e5d5d411",
+        "outputId": "5d483aab-b6fa-4d08-ce33-3c9d6ecbe6f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 804
@@ -1473,7 +1473,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 183,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2070,7 +2070,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 183
+          "execution_count": 64
         }
       ]
     },
@@ -2105,7 +2105,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "SR-9rohMkUjR",
-        "outputId": "366e35b6-a039-4ad4-bfe8-23f65fe1a853",
+        "outputId": "0528f2c6-44ce-4bb6-d62e-e751fb50ef98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2114,7 +2114,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 186,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2370,7 +2370,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 186
+          "execution_count": 67
         }
       ]
     },
@@ -2423,12 +2423,13 @@
         "                       'minivan':'light vehicle'\n",
         "                      }\n",
         "    self.scene_list = ['intersection','crosswalk','bridge','light',\n",
-        "                  'stop sign','u-turn',]#,'traffic light']\n",
+        "                  'stop sign','u-turn', 'roundabout']#,'traffic light']\n",
         "\n",
-        "    init_action_list = ['turn','merge','accelerate','brake','stop','slow',\n",
-        "                        'move','walk','cross','park','forward']#,'change lane']\n",
+        "    self.init_action_list = ['turn','merge','accelerate','brake','stop','slow',\n",
+        "                        'move','walk','cross','park','forward', 'driving', 'waiting', \n",
+        "                        'stopped', 'moving', 'slowing', 'turning', 'turned']#,'change lane']\n",
         "    self.action_list = []\n",
-        "    for a in init_action_list:\n",
+        "    for a in self.init_action_list:\n",
         "        self.action_list.append(self.stemmer.stem(a))\n",
         "\n",
         "    self.actors = {'1':[], '2':[], '3':[], '4':[], '5':[], '6':[], '7':[], \n",
@@ -2475,7 +2476,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "M--8pXkwvaiU",
-        "outputId": "9556a7af-713c-416a-fc0b-e51029c0ee35",
+        "outputId": "c3ca7ff1-6301-42de-c627-ceb80a654ec8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2484,7 +2485,7 @@
       "source": [
         "len(sdlList)"
       ],
-      "execution_count": 218,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2496,7 +2497,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 218
+          "execution_count": 108
         }
       ]
     },
@@ -2555,7 +2556,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "16iFV7LEzMYU",
-        "outputId": "2b01dabb-f629-4c71-ec96-423921321acc",
+        "outputId": "fd9e31ba-af5e-4973-d9d6-690b9587ef82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
@@ -2564,7 +2565,7 @@
       "source": [
         "(sdlObjectList[6].statements)"
       ],
-      "execution_count": 222,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2590,7 +2591,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 222
+          "execution_count": 112
         }
       ]
     },
@@ -2615,11 +2616,11 @@
       "metadata": {
         "id": "N_Jmbn68zHML",
         "colab_type": "code",
+        "outputId": "7133de49-c5ce-456b-bc17-2be646c81890",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 734
-        },
-        "outputId": "43ea7379-2d2d-4639-df8b-73d808c493d4"
+        }
       },
       "source": [
         "print('Object 290: ')\n",
@@ -2641,7 +2642,7 @@
         "    print('Time segment:', actorsIndex, \",  %s: %s\"%(sdlObjectList[150].actors[actorsIndex][j].description,sdlObjectList[150].actors[actorsIndex][j].action))\n",
         "print('Scene: ', sdlObjectList[150].scene)\n"
       ],
-      "execution_count": 224,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -2649,14 +2650,14 @@
             "Object 290: \n",
             "Actors: \n",
             "{'1': 'The car is driving forward slowly since there is a ambulance waiting to turn left', '2': 'The car is stopped since there is a ambulance waiting to turn left', '3': 'The car is moving forward since the ambulance in front has turned', '4': 'The car has come to a sudden stop for reasons unknown', '5': 'The car has started driving forward again since it was stopped in the street', '6': 'No Data Recorded', '7': 'No Data Recorded', '8': 'No Data Recorded', '9': 'No Data Recorded', '10': 'No Data Recorded', '11': 'No Data Recorded', '12': 'No Data Recorded', '13': 'No Data Recorded', '14': 'No Data Recorded', '15': 'No Data Recorded'}\n",
-            "Time segment: 1 ,  light vehicle: forward\n",
-            "Time segment: 1 ,  heavy vehicle: turn\n",
+            "Time segment: 1 ,  light vehicle: driving\n",
+            "Time segment: 1 ,  heavy vehicle: waiting\n",
             "Time segment: 2 ,  light vehicle: stopped\n",
-            "Time segment: 2 ,  heavy vehicle: turn\n",
+            "Time segment: 2 ,  heavy vehicle: waiting\n",
             "Time segment: 3 ,  light vehicle: moving\n",
             "Time segment: 3 ,  heavy vehicle: turned\n",
             "Time segment: 4 ,  light vehicle: stop\n",
-            "Time segment: 5 ,  light vehicle: forward\n",
+            "Time segment: 5 ,  light vehicle: driving\n",
             "Time segment: 6 ,  NaN: NaN\n",
             "Time segment: 7 ,  NaN: NaN\n",
             "Time segment: 8 ,  NaN: NaN\n",
@@ -2671,14 +2672,14 @@
             "Object 150: \n",
             "Actors: \n",
             "{'1': 'The car is driving forward because the light is green.', '2': 'The car is slowing due to the stop sign.', '3': 'The car is turning right to enter another road.', '4': 'The car is driving forward as the road is clear of traffic.', '5': 'The car steers to the right to enter the roundabout.', '6': 'The car stays left to stay in the round about.', '7': 'The car steers right so that it may exit the roundabout.', '8': 'The car drives forward as the street is clear of traffic.', '9': 'No Data Recorded', '10': 'No Data Recorded', '11': 'No Data Recorded', '12': 'No Data Recorded', '13': 'No Data Recorded', '14': 'No Data Recorded', '15': 'No Data Recorded'}\n",
-            "Time segment: 1 ,  light vehicle: forward\n",
+            "Time segment: 1 ,  light vehicle: driving\n",
             "Time segment: 2 ,  light vehicle: slowing\n",
             "Time segment: 3 ,  light vehicle: turning\n",
-            "Time segment: 4 ,  light vehicle: forward\n",
+            "Time segment: 4 ,  light vehicle: driving\n",
             "Time segment: 5 ,  light vehicle: \n",
             "Time segment: 6 ,  light vehicle: \n",
             "Time segment: 7 ,  light vehicle: \n",
-            "Time segment: 8 ,  light vehicle: forward\n",
+            "Time segment: 8 ,  light vehicle: drives\n",
             "Time segment: 9 ,  NaN: NaN\n",
             "Time segment: 10 ,  NaN: NaN\n",
             "Time segment: 11 ,  NaN: NaN\n",
