Add more action synonyms

--- a/SDL_Data_Mining.ipynb
+++ b/SDL_Data_Mining.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -57,8 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "#bddx = load_bddx_data(\"BDDX.csv\")\n",
-    "bddx = load_bddx_data(\"../../Deep-Explanations/revisedBDDX.csv\")"
+    "bddx = load_bddx_data(\"BDDX.csv\")"
    ]
   },
   {
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -768,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1061,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1632,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1645,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2036,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2060,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2068,7 +2067,6 @@
    },
    "outputs": [],
    "source": [
-    "# Aron's Version\n",
     "class SDL:\n",
     "  def __init__(self, index, statements, link):\n",
     "    self.statements = statements\n",
@@ -2083,7 +2081,8 @@
     "  def getDescriptors(self, statement, timeSegment): \n",
     "    stemmer = nltk.stem.PorterStemmer()\n",
     "    # stemmer allows us to match words with the same roots: e.g., it identifies \"turns\", \"turning\", and \"turn\" as the same word\n",
-    "\n",
+    "    # But it recognizes \"slow\" and \"slowly\" as different, and it thinks \"go\" and \"goes\" are different\n",
+    "    \n",
     "    actor_list = {'car':'light vehicle',\n",
     "                  'bus':'heavy vehicle',\n",
     "                  'truck':'heavy vehicle',\n",
@@ -2091,7 +2090,8 @@
     "                  'pedestrian':'pedestrian',\n",
     "                  'ambulance':'heavy vehicle',\n",
     "                  'minivan':'light vehicle',\n",
-    "                  'traffic':'traffic'\n",
+    "                  'traffic':'traffic',\n",
+    "                  'the car':'light vehicle'\n",
     "                 }\n",
     "    scene_list = ['intersection',\n",
     "                  'crosswalk',\n",
@@ -2101,26 +2101,37 @@
     "                  'yield sign',\n",
     "                  'sign',\n",
     "                  'u-turn',\n",
-    "                  'traffic light'\n",
+    "                  'traffic light',\n",
+    "                  'traffic signal',\n",
+    "                  'turn lane',\n",
     "                 ]\n",
     "\n",
     "    init_action_list = {'turn':'turn',\n",
     "                        'merge':'merge',\n",
+    "                        'swerve':'merge',\n",
+    "                        'veer':'merge',\n",
+    "                        'switch':'merge',\n",
     "                        'accelerate':'accelerate',\n",
     "                        'brake':'brake',\n",
-    "                        'stop':'stop',\n",
     "                        'slow':'brake',\n",
+    "                        'stop':'stop',\n",
+    "                        'wait':'stop',\n",
     "                        'move':'forward',\n",
     "                        'walk':'walk',\n",
     "                        'cross':'walk',\n",
     "                        'park':'park',\n",
     "                        'forward':'forward',\n",
-    "                        'wait':'stop',\n",
-    "                        'switch':'merge',\n",
+    "                        'stay':'forward',\n",
+    "                        'maintain':'forward',\n",
+    "                        'proceeds':'forward',\n",
     "                        'drive':'drive',\n",
     "                        'steer':'drive',\n",
     "                        'go':'drive',\n",
-    "                        'goes':'drive'\n",
+    "                        'goes':'drive',\n",
+    "                        'head':'drive',\n",
+    "                        'pull':'drive',\n",
+    "                        'travel':'drive',\n",
+    "                        'reverse':'reverse',\n",
     "                       }\n",
     "    action_list = {}\n",
     "    for a in init_action_list:\n",
@@ -2128,14 +2139,18 @@
     "\n",
     "    light_status = [\"green\",\"yellow\",\"red\"]\n",
     "    directions = [\"left\",\"right\",\"u-turn\",\"u turn\",\"uturn\",\"in front\",\"its\",\n",
-    "                 \"left to right\",\"right to left\"]\n",
+    "                 \"left to right\",\"right to left\",\"through\",\"backward\"]\n",
     "    ngrams = ['stop sign',\n",
     "              'yield sign',\n",
     "              'traffic light',\n",
+    "              'traffic signal',\n",
     "              'u turn',\n",
     "              'in front',\n",
     "              'left to right',\n",
-    "              'right to left'\n",
+    "              'right to left',\n",
+    "              'the car',\n",
+    "              'turn lane',\n",
+    "              'clear of'\n",
     "             ]\n",
     "\n",
     "    init_phrase = nltk.word_tokenize(statement.lower())\n",
@@ -2171,8 +2186,15 @@
     "        if (word in actor_list):\n",
     "            if len(self.actors[timeSegment]) == 0:\n",
     "                self.actors[timeSegment].append(Actor(\"ego\"))\n",
+    "            elif word == 'the car' and (idx+1 < len(phrase) and phrase[idx+1] != 'in front'):\n",
+    "                continue # \"the car\" always refers to ego, except for the case of \"the car in front\"\n",
     "            else:\n",
+    "                if \"no\" in phrase[min(0,idx-3):idx] or \"clear of\" in phrase[min(0,idx-3):idx]:\n",
+    "                    continue # don't add an actor if the phrase is \"there are no cars\"\n",
     "                self.actors[timeSegment].append(Actor(actor_list[word]))\n",
+    "            if idx > 0 and stemmer.stem(phrase[idx-1]) in action_list:\n",
+    "                # \"stopped vehicle\" is equivalent to \"the vehicle is stopped\"\n",
+    "                self.actors[timeSegment][-1].action = action_list[stemmer.stem(phrase[idx-1])]\n",
     "        # Word is a Scene Object\n",
     "        elif (word in scene_list):\n",
     "            if word == \"light\" or word == \"traffic light\":\n",
@@ -2185,12 +2207,22 @@
     "                    self.scene[timeSegment].append(status+\" \"+word)\n",
     "                else:\n",
     "                    self.scene[timeSegment].append(word)\n",
+    "            elif word == \"turn lane\":\n",
+    "                if len(self.actors[timeSegment]) > 0 and self.actors[timeSegment][-1].action != \"\":\n",
+    "                    a = self.actors[timeSegment][-1].action.split(\" \")\n",
+    "                    if a[0] == \"turn\" or a[0] == \"drive\":\n",
+    "                        a[0] = \"merge\"\n",
+    "                        self.actors[timeSegment][-1].action = \" \".join(a)\n",
+    "                self.scene[timeSegment].append(word)\n",
     "            else:\n",
     "                self.scene[timeSegment].append(word)\n",
     "        # Word is an Action\n",
     "        elif (stemmer.stem(word) in action_list):\n",
     "            if len(self.actors[timeSegment]) > 0 and self.actors[timeSegment][-1].action == \"\":\n",
-    "                self.actors[timeSegment][-1].action = action_list[stemmer.stem(word)]\n",
+    "                if word == \"stay\" and (idx+1 < len(phrase) and stemmer.stem(phrase[idx+1]) in action_list):\n",
+    "                    continue # can ignore since the loop will catch the next action anyway\n",
+    "                else:\n",
+    "                    self.actors[timeSegment][-1].action = action_list[stemmer.stem(word)]\n",
     "        # Word is a direction (goes with an action)\n",
     "        elif (word in directions):\n",
     "            if word == \"left to right\":\n",
@@ -2210,9 +2242,13 @@
     "                    self.actors[timeSegment][-1].action = \"turn \"+direction\n",
     "            elif self.actors[timeSegment][-1].action == \"merge\":\n",
     "                self.actors[timeSegment][-1].action = \"merge \"+direction\n",
-    "            elif self.actors[timeSegment][-1].action == \"drive\" or self.actors[timeSegment][-1].action == \"\":\n",
+    "            elif self.actors[timeSegment][-1].action == \"drive\":\n",
     "                if direction == \"left\" or direction == \"right\":\n",
     "                    self.actors[timeSegment][-1].action = \"turn \"+direction\n",
+    "                elif word == \"through\":\n",
+    "                    self.actors[timeSegment][-1].action = \"forward\"\n",
+    "                elif word == \"backward\":\n",
+    "                    self.actors[timeSegment][-1].action = \"reverse\"\n",
     "    for a in self.actors[timeSegment]:\n",
     "        if a.description == \"traffic\" and a.action == \"\":\n",
     "            a.action = \"forward\" # traffic with no action is going forward\n",
@@ -2222,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2265,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2283,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2300,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2357,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2373,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2388,19 +2424,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Object 290: \n",
+      "Object 351: \n",
       "Actors: \n",
-      "{'1': 'The car is driving forward slowly since there is a ambulance waiting to turn left', '2': 'The car is stopped since there is a ambulance waiting to turn left', '3': 'The car is moving forward since the ambulance in front has turned', '4': 'The car has come to a sudden stop for reasons unknown', '5': 'The car has started driving forward again since it was stopped in the street', '6': 'No Data Recorded', '7': 'No Data Recorded', '8': 'No Data Recorded', '9': 'No Data Recorded', '10': 'No Data Recorded', '11': 'No Data Recorded', '12': 'No Data Recorded', '13': 'No Data Recorded', '14': 'No Data Recorded', '15': 'No Data Recorded'}\n",
-      "Time segment: 1 ,  ego: forward\n",
-      "Time segment: 1 ,  heavy vehicle: stop\n",
-      "Time segment: 2 ,  ego: stop\n",
-      "Time segment: 2 ,  heavy vehicle: stop\n",
+      "{'1': 'The car makes a u turn in order to exit the parking lot.', '2': 'The car turns right as there is no traffic from the other direction.', '3': 'The car drives down the road as there are no other cars in front.', '4': 'The car decelerates as there is a stopped car ahead.', '5': 'The car comes to a complete stop as there is traffic directly ahead.', '6': 'The car turns into the left hand turn lane in order to proceed through the light.', '7': 'The car drives through the turn lane as there is no one in the lane.', '8': 'The car comes to a complete stop as the intersection light has turned red.', '9': 'No Data Recorded', '10': 'No Data Recorded', '11': 'No Data Recorded', '12': 'No Data Recorded', '13': 'No Data Recorded', '14': 'No Data Recorded', '15': 'No Data Recorded'}\n",
+      "Time segment: 1 ,  ego: park\n",
+      "Time segment: 2 ,  ego: turn right\n",
       "Time segment: 3 ,  ego: forward\n",
-      "Time segment: 3 ,  heavy vehicle: turn\n",
       "Time segment: 4 ,  ego: stop\n",
-      "Time segment: 5 ,  ego: forward\n",
-      "Time segment: 6 ,  NaN: NaN\n",
-      "Time segment: 7 ,  NaN: NaN\n",
+      "Time segment: 4 ,  light vehicle: stop\n",
+      "Time segment: 5 ,  ego: stop\n",
+      "Time segment: 5 ,  traffic: forward\n",
+      "Time segment: 6 ,  ego: merge left\n",
+      "Time segment: 7 ,  ego: forward\n",
+      "Time segment: 8 ,  ego: stop\n",
+      "Time segment: 9 ,  NaN: NaN\n",
+      "Time segment: 10 ,  NaN: NaN\n",
+      "Time segment: 11 ,  NaN: NaN\n",
+      "Time segment: 12 ,  NaN: NaN\n",
+      "Time segment: 13 ,  NaN: NaN\n",
+      "Time segment: 14 ,  NaN: NaN\n",
+      "Time segment: 15 ,  NaN: NaN\n",
+      "Scene:  {'1': [], '2': [], '3': [], '4': [], '5': [], '6': ['turn lane', 'light'], '7': ['turn lane'], '8': ['intersection', 'red light'], '9': ['NaN'], '10': ['NaN'], '11': ['NaN'], '12': ['NaN'], '13': ['NaN'], '14': ['NaN'], '15': ['NaN']}\n",
+      "Object 2420: \n",
+      "Actors: \n",
+      "{'1': 'The car is accelerating Because traffic ahead of it is moving normally.', '2': \"The car drifts slightly to the left and back to the right Because there is a box truck making a right turn onto a street ahead of it but it is sticking out into the lane and partially blocking it so it has to go around it into the opposing traffic's lane.\", '3': 'The car continues accelerating Because it has gone around the box truck that was blocking the lane and is now back in its own lane with traffic moving normally.', '4': \"The car is drifting left into the opposing traffic's lane Because it is approaching a utility truck stopped in the road with cones behind it blocking the lane so it has to go around it by driving in the opposing traffic's lane.\", '5': 'The car drifts back to the right To get back into its own lane and the correct side of the street after it passed up the utility truck.', '6': 'The car continues accelerating Because it is back in its lane going straight with the traffic light up ahead green and no traffic ahead of it.', '7': 'The car drifts slightly to the left and back to the right Because there is another large truck parked on the side of the street and partially blocking the lane so it has to go around the truck.', '8': 'No Data Recorded', '9': 'No Data Recorded', '10': 'No Data Recorded', '11': 'No Data Recorded', '12': 'No Data Recorded', '13': 'No Data Recorded', '14': 'No Data Recorded', '15': 'No Data Recorded'}\n",
+      "Time segment: 1 ,  ego: accelerate\n",
+      "Time segment: 1 ,  traffic: forward\n",
+      "Time segment: 2 ,  ego: \n",
+      "Time segment: 2 ,  heavy vehicle: turn\n",
+      "Time segment: 2 ,  traffic: forward\n",
+      "Time segment: 3 ,  ego: accelerate\n",
+      "Time segment: 3 ,  heavy vehicle: \n",
+      "Time segment: 3 ,  traffic: forward\n",
+      "Time segment: 4 ,  ego: \n",
+      "Time segment: 4 ,  traffic: forward\n",
+      "Time segment: 4 ,  heavy vehicle: stop\n",
+      "Time segment: 4 ,  traffic: forward\n",
+      "Time segment: 5 ,  ego: \n",
+      "Time segment: 5 ,  heavy vehicle: \n",
+      "Time segment: 6 ,  ego: accelerate\n",
+      "Time segment: 7 ,  ego: \n",
+      "Time segment: 7 ,  heavy vehicle: park\n",
+      "Time segment: 7 ,  heavy vehicle: \n",
       "Time segment: 8 ,  NaN: NaN\n",
       "Time segment: 9 ,  NaN: NaN\n",
       "Time segment: 10 ,  NaN: NaN\n",
@@ -2409,33 +2474,12 @@
       "Time segment: 13 ,  NaN: NaN\n",
       "Time segment: 14 ,  NaN: NaN\n",
       "Time segment: 15 ,  NaN: NaN\n",
-      "Scene:  {'1': [], '2': [], '3': [], '4': [], '5': [], '6': ['NaN'], '7': ['NaN'], '8': ['NaN'], '9': ['NaN'], '10': ['NaN'], '11': ['NaN'], '12': ['NaN'], '13': ['NaN'], '14': ['NaN'], '15': ['NaN']}\n",
-      "Object 150: \n",
-      "Actors: \n",
-      "{'1': 'The car is driving forward because the light is green.', '2': 'The car is slowing due to the stop sign.', '3': 'The car is turning right to enter another road.', '4': 'The car is driving forward as the road is clear of traffic.', '5': 'The car steers to the right to enter the roundabout.', '6': 'The car stays left to stay in the round about.', '7': 'The car steers right so that it may exit the roundabout.', '8': 'The car drives forward as the street is clear of traffic.', '9': 'No Data Recorded', '10': 'No Data Recorded', '11': 'No Data Recorded', '12': 'No Data Recorded', '13': 'No Data Recorded', '14': 'No Data Recorded', '15': 'No Data Recorded'}\n",
-      "Time segment: 1 ,  ego: forward\n",
-      "Time segment: 2 ,  ego: brake\n",
-      "Time segment: 3 ,  ego: turn right\n",
-      "Time segment: 4 ,  ego: forward\n",
-      "Time segment: 4 ,  traffic: forward\n",
-      "Time segment: 5 ,  ego: turn right\n",
-      "Time segment: 6 ,  ego: turn left\n",
-      "Time segment: 7 ,  ego: turn right\n",
-      "Time segment: 8 ,  ego: forward\n",
-      "Time segment: 8 ,  traffic: forward\n",
-      "Time segment: 9 ,  NaN: NaN\n",
-      "Time segment: 10 ,  NaN: NaN\n",
-      "Time segment: 11 ,  NaN: NaN\n",
-      "Time segment: 12 ,  NaN: NaN\n",
-      "Time segment: 13 ,  NaN: NaN\n",
-      "Time segment: 14 ,  NaN: NaN\n",
-      "Time segment: 15 ,  NaN: NaN\n",
-      "Scene:  {'1': ['green light'], '2': ['stop sign'], '3': [], '4': [], '5': [], '6': [], '7': [], '8': [], '9': ['NaN'], '10': ['NaN'], '11': ['NaN'], '12': ['NaN'], '13': ['NaN'], '14': ['NaN'], '15': ['NaN']}\n"
+      "Scene:  {'1': [], '2': [], '3': [], '4': [], '5': [], '6': ['green traffic light'], '7': [], '8': ['NaN'], '9': ['NaN'], '10': ['NaN'], '11': ['NaN'], '12': ['NaN'], '13': ['NaN'], '14': ['NaN'], '15': ['NaN']}\n"
      ]
     }
    ],
    "source": [
-    "example = 290 # 351 and 5910 have actors with no action\n",
+    "example = 351 # 290\n",
     "\n",
     "print('Object %i: '%(example))\n",
     "print(\"Actors: \")\n",
@@ -2447,7 +2491,7 @@
     "    print('Time segment:', actorsIndex, \",  %s: %s\"%(sdlObjectList[example].actors[actorsIndex][j].description,sdlObjectList[example].actors[actorsIndex][j].action))\n",
     "print('Scene: ', sdlObjectList[example].scene)\n",
     "\n",
-    "example = 150\n",
+    "example = 2420 # 190\n",
     "\n",
     "print('Object %i: '%(example))\n",
     "print(\"Actors: \")\n",
@@ -2461,14 +2505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 38522 actors and 34297 actions. Completeness: 0.890322\n"
+      "There are 34658 actors and 32920 actions. Completeness: 0.949853\n"
      ]
     }
    ],
@@ -2490,12 +2534,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "eakR1_DVzHMQ"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
