extract data from github url

--- a/SDL_Data_Mining.ipynb
+++ b/SDL_Data_Mining.ipynb
@@ -61,7 +61,7 @@
       },
       "source": [
         "import pandas as pd # Pandas library enables data manipulation\n",
-        "\n",
+        "data_url = \"https://raw.githubusercontent.com/linklab-uva/Scenario2Vector/master/BDDX.csv?token=AH3QIXY34VQZCSWNDXNDTJ26ODTOG\"\n",
         "def load_bddx_data(csv_name):\n",
         "    column_names = ['Index', 'InputVideo', '1S', '1E', '1A', '1J', '2S', '2E', '2A', '2J', '3S', '3E', '3A', '3J',\n",
         "                    '4S', '4E', '4A', '4J','5S', '5E', '5A', '5J','6S', '6E', '6A', '6J','7S', '7E', '7A', '7J',\n",
@@ -81,7 +81,7 @@
         "colab": {}
       },
       "source": [
-        "bddx = load_bddx_data(\"BDDX.csv\")"
+        "bddx = load_bddx_data(data_url)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -91,7 +91,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGSVWQdTeDeG",
-        "outputId": "5d9b3fe6-7b99-4fbf-ac21-a39e69327c12",
+        "outputId": "46384ef3-ec4b-4cc4-d35c-17fe8a6fd100",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 787
@@ -100,7 +100,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +862,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 30
         }
       ]
     },
@@ -884,7 +884,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KEd8mYWAouxX",
-        "outputId": "60773836-d290-44dd-8370-03c5e4d82e29",
+        "outputId": "bc3c88eb-fb53-4d40-bb09-a950821c8493",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -893,7 +893,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 32
         }
       ]
     },
@@ -2871,7 +2871,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "acd49959-00f3-4004-b67c-7a2f543de346"
+        "outputId": "7f237163-444c-4027-fd9a-80c94b41cb87"
       },
       "source": [
         "actor_count = 0\n",
@@ -2888,7 +2888,7 @@
         "\n",
         "print(\"There are %i actors and %i actions. Completeness: %f\"%(actor_count,action_count,action_count/actor_count))"
       ],
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
