cleaned up notebook

--- a/SDL_Data_Mining.ipynb
+++ b/SDL_Data_Mining.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "SDL_Data_Mining.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true
     },
     "kernelspec": {
@@ -26,6 +27,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W-buGJ2c-_Cc",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Imports"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -51,6 +62,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8G_67Dfy_Dok",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Data Cleaning"
+      ]
     },
     {
       "cell_type": "code",
@@ -2375,6 +2396,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l7GCX7cn_H2h",
+        "colab_type": "text"
+      },
+      "source": [
+        "# SDL Class"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -2900,17 +2931,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "7bAmYbTh4RBR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AMu05ea8PWoZ",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "# Classification in SDL Space"
+      ]
     }
   ]
 }
